--- a/test.html
+++ b/test.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-<h1 title="header" class="heading">This is a Heading</h1>
+<h1 title="header" class="heading">This is a Heading!!</h1>
 
 <p title="paragraph" class="Para">This is a paragraph.</p>
+
+<p title="paragraph" class="Para">This is a second paragraph.</p>
 
 <button>Click Me</button>
 
