--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 
 <p title="paragraph" class="Para">This is a second paragraph.</p>
 
-<button> <a href="https://google.com">Click Me</button> </a>
+<button title="button_test"> <a href="https://google.com">Search here</button> </a>
 
 <p class="list"> This is an un ordered list</p>
 
@@ -24,6 +24,9 @@
 	 <li>Blue</li>
 	 <li>Green</li>
 </ul>	 
-
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Today's date and time</button>
+<p id="demo"></p>
 </body>
 </html>
