--- a/test.html
+++ b/test.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-
 <head>
 <title>Test</title>
 <link rel="stylesheet" type="text/css" href= "test_style_sheet.css">
@@ -28,5 +27,31 @@
 onclick="document.getElementById('demo').innerHTML = Date()">
 Today's date and time</button>
 <p id="demo"></p>
+<table id=table style="width:100%">
+  <h2>Here's a table to view!</h2>
+
+  <tr>
+    <th>Xbox</th>
+    <th>Play station</th> 
+    <th>Nintendo</th>
+    <th>PC</th>
+  </tr>
+  <tr>
+    <td>Original, 360, One</td>
+    <td>PS, PS2, PS3, PS4</td> 
+    <td>Game Boy, Super NES.
+Nintendo 64, Game Boy Color.
+Game Boy Advance, GameCube.
+Nintendo DS, Wii.
+Nintendo 3DS, Wii U.
+Nintendo Switch.</td>
+    <td>Desktop, laptop</td>
+  </tr>
+  <tr>
+    <td>November 15, 2001, November 22, 2005, November 7, 2017</td>
+    <td>December 3, 1994, March 4, 2000, November 11, 2006, November 15, 2013</td> 
+    <td>April 21, 1989, November 21, 1990, September 26, 1996, October 21, 1998, March 21, 2001, September 14, 2001, November 21, 2004, November 18, 2012, February 26, 2011, November 18, 2012, March 3, 2017 </td>  
+  </tr>
+</table>
 </body>
 </html>
