Adding different Form/inputs
implementing Radio and Lists

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!-- this is for Html -->
 <!DOCTYPE html>
 <html lang="en-US">
+ <meta charset="UTF-8">
 
 <head>
 <title>Test</title>
@@ -53,5 +54,19 @@ Nintendo Switch.</td>
     <td>April 21, 1989, November 21, 1990, September 26, 1996, October 21, 1998, March 21, 2001, September 14, 2001, November 21, 2004, November 18, 2012, February 26, 2011, November 18, 2012, March 3, 2017 </td>  
   </tr>
 </table>
+<form>
+  <input type="radio" name="opinion" value="yes"> yes<br>
+  <input type="radio" name="opinion" value="no"> no<br>
+  <input type="radio" name="opinion" value="obstained" checked> obstained
+</form>
+<br>
+<form>
+    <select name="Utensils">
+    <option value="knife">knife</option>
+    <option value="spoon">spoon</option>
+    <option value="fork">fork</option>
+    <option value="chopsticks">chopsticks</option>
+</form>
+
 </body>
 </html>
