giving the table a border

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 onclick="document.getElementById('demo').innerHTML = Date()">
 Today's date and time</button>
 <p id="demo"></p>
-<table id=table style="width:100%">
+<table id=table style="width:100%" border=1>
   <h2>Here's a table to view!</h2>
 
   <tr>
