adding a little CSS.  organizing the code a little bit

--- a/test.html
+++ b/test.html
@@ -11,22 +11,20 @@
 
 <h1 title="header" class="heading">This is a Heading!!</h1>
 
-<p title="paragraph" class="Para">This is a paragraph.</p>
+<p title="paragraph" class="para">This is a blue paragraph. The last word in this sentence will be <span class="green-text">GREEN.</span></p>
 
-<p title="paragraph" class="Para">This is a second paragraph.</p>
+<p title="paragraph" class="para">This is a red paragraph.</p>
 
 <button title="button_test"> <a href="https://google.com">Search here</button> </a>
 
 <p class="list"> This is an un ordered list</p>
 
 <ul> 
-     <li>Red</li>
-	 <li>Blue</li>
-	 <li>Green</li>
+    <li>Red</li>
+	  <li>Blue</li>
+	  <li>Green</li>
 </ul>	 
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Today's date and time</button>
+<button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Today's date and time</button>
 <p id="demo"></p>
 <table id=table style="width:100%" border=1>
   <h2>Here's a table to view!</h2>
