tweaking the background-glow text

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<span  class="emily-name">Emily</span>
+<div class="emily-name">Emily is <span class="background-change">AWESOME</span></div>
 <h1 title="header" class="heading">This is a Heading!!</h1>
 
 <p title="paragraph" class="para">This is a blue paragraph. The last word in this sentence will be <span class="green-text">GREEN.</span></p>
